# QuaZip

./: CMakeLists.txt  QuaZipConfig.cmake.in  README.md
CMakeExternals/: zlib.cmake
quazip/: CMakeLists.txt
test/: qztest.vcproj  run_moc.bat
